@@ -13,7 +13,6 @@
 #include <inttypes.h>
 #include <stdio.h>
 
-#include "../../testmacros.h"
 #include "../led.h"
 
 rtems_task Test_task(
@@ -22,8 +21,6 @@ rtems_task Test_task(
 {
   rtems_event_set   events;
   rtems_status_code status;
-
-  LED_INIT();
 
   for ( ; ; ) {
     events = 0;
@@ -44,40 +41,38 @@ rtems_task Test_task(
   }
 }
 
-/*
- *  Keep the names and IDs in global variables so another task can use them.
- */
-
-rtems_id   Task_id[ 4 ];         /* array of task ids */
-rtems_name Task_name[ 4 ];       /* array of task names */
 
 rtems_task Init(
   rtems_task_argument argument
 )
 {
-  rtems_status_code status;
   uint32_t          count = 0;
   rtems_event_set   events;
+  rtems_status_code status;
+  rtems_id          task_id;
+  rtems_name        task_name;
 
   puts( "\n\n*** LED BLINKER -- event receive server ***" );
 
-  Task_name[ 1 ] = rtems_build_name( 'T', 'A', '1', ' ' );
+  LED_INIT();
+
+  task_name = rtems_build_name( 'T', 'A', '1', ' ' );
 
   status = rtems_task_create(
-    Task_name[ 1 ], 1, RTEMS_MINIMUM_STACK_SIZE * 2, RTEMS_DEFAULT_MODES,
-    RTEMS_DEFAULT_ATTRIBUTES, &Task_id[ 1 ]
+    task_name, 1, RTEMS_MINIMUM_STACK_SIZE * 2, RTEMS_DEFAULT_MODES,
+    RTEMS_DEFAULT_ATTRIBUTES, &task_id
   );
 
-  status = rtems_task_start( Task_id[ 1 ], Test_task, 1 );
+  status = rtems_task_start( task_id, Test_task, 1 );
 
   while (1) {
 
     events = ( (count++ % 2) == 0 ) ?  RTEMS_EVENT_1 : RTEMS_EVENT_2;
-    status = rtems_event_send( Task_id[ 1 ], events );
+    status = rtems_event_send( task_id, events );
     if ( status != RTEMS_SUCCESSFUL )
       fputs( "send did not work\n", stderr );
 
-    status = rtems_task_wake_after( get_ticks_per_second() );
+    status = rtems_task_wake_after( rtems_clock_get_ticks_per_second() );
   }
 
   status = rtems_task_delete( RTEMS_SELF );
